adicionando o navbar lateral autalizando ele

--- a/App/index.html
+++ b/App/index.html
@@ -18,12 +18,22 @@
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight bg-dark">
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li class="colorlib-active"><a class="text-light" href="#">Home</a></li>
-					<li><a class="text-light" href="#">Project</a></li>
-					<li><a class="text-light" href="#">About</a></li>
+					<li class="colorlib-active"><a class="text-light" href="#"><i class="fa-solid fa-clipboard-list"></i> PEDIDOS</a></li>
+		      <li>
+		        <a class="text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"><i class="fa-solid fa-box-open"></i> PRODUTO</a>
+		        <div class="dropdown-menu text-light bg-secondary" aria-labelledby="navbarDropdown" style="padding: 0;">
+		          <a class="text-light m-2 row" href="#">CADASTRAR</a>
+		          <a class="text-light m-2 row" href="#">EDITAR</a>
 					<li><a class="text-light" href="#">Services</a></li>
 					<li><a class="text-light" href="#">Blog</a></li>
 					<li><a class="text-light" href="#">Contact</a></li>
+
+
+
+
+
+
+
 				</ul>
 			</nav>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -56,6 +66,7 @@
   <script src="js/popper.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://kit.fontawesome.com/791479aa38.js" crossorigin="anonymous"></script>
 
 	</body>
 </html>
